added zombie picture and wrote functions to move zombie picture, keep track of the score, and count down

--- a/style.css
+++ b/style.css
@@ -13,3 +13,8 @@
     width: 618px;
     height: 618px;
 }
+
+.mole {
+    background-image: url('zombie3.png');
+    background-position: center;
+}
