--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     font-family: 'Jost', sans-serif;
 }
 
+h1, h2, h3 {
+    margin-bottom: 5px;
+}
+
 .square {
     width: 200px;
     height: 200px;
@@ -22,7 +26,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 
@@ -46,4 +50,15 @@ main {
 .mole {
     background-image: url('zombie3.png');
     background-position: center;
+}
+
+.links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+a {
+    padding: 20px;
 }
